@@ -7,7 +7,7 @@ final class P01 {
 		Object number = new Object();
 		float f=((Number)number).floatValue();// java.lang.Object cannot be cast to java.lang.Number
 		
-		Number nI = new Integer(1);
+		Number nI = Integer.valueOf(1);
 		Object o = ((Number)nI).floatValue();//put visa versa
 		float o1 = ((Number)nI).floatValue();
 	}
